# so5_5_github_issue21

./: Dockerfile
src/: CMakeLists.txt  main.cpp
